5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1671_1105.log
== TEST (2019-04-22 15:30:27) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input(" Digite o brasao: ")
print(" Entrada:",b)
if(b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if(b=="lobo"):
		mensagem = "Stark"
		print("Casa:",mensagem)
	elif(b=="leao"):
		mensagem = "Lannister"
		print("Casa:",mensagem)
	elif(b=="veado"):
		mensagem = "Baratheon"
		print("Casa:",mensagem)
	elif(b=="dragao"):
		mensagem = "Targaryen"
		print("Casa:",mensagem)
	elif(b=="rosa"):
		mensagem="Tyrell"
		print("Casa:",mensagem)
	elif(b=="sol"):
		mensagem= "Martell"
		print("Casa:",mensagem)
	elif(b=="lula"):
		mensagem="Greyjoy"
	elif(b=="esfolado"):
		mensagem="Bolton"
		print("Casa:",mensagem)
	elif(b=="turta"):
		mensagem= "Tully"
		print("Casa:",mensagem)
	else:
		mensagem= "Brasao invalido"
		print(mensagem)
		
-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 15:30:39) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input(" Digite o brasao: ")
print(" Entrada:",b)
if(b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if(b=="lobo"):
		mensagem = "Stark"
		print("Casa:",mensagem)
	elif(b=="leao"):
		mensagem = "Lannister"
		print("Casa:",mensagem)
	elif(b=="veado"):
		mensagem = "Baratheon"
		print("Casa:",mensagem)
	elif(b=="dragao"):
		mensagem = "Targaryen"
		print("Casa:",mensagem)
	elif(b=="rosa"):
		mensagem="Tyrell"
		print("Casa:",mensagem)
	elif(b=="sol"):
		mensagem= "Martell"
		print("Casa:",mensagem)
	elif(b=="lula"):
		mensagem="Greyjoy"
	elif(b=="esfolado"):
		mensagem="Bolton"
		print("Casa:",mensagem)
	elif(b=="turta"):
		mensagem= "Tully"
		print("Casa:",mensagem)
	else:
		mensagem= "Brasao invalido"
		print(mensagem)
		
-- EXECUTION TIME:
0.167252
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:30:52) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input(" Digite o brasao: ")
print(" Entrada:",b)
if(b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if(b=="lobo"):
		mensagem = "Stark"
		print("Casa:",mensagem)
	elif(b=="leao"):
		mensagem = "Lannister"
		print("Casa:",mensagem)
	elif(b=="veado"):
		mensagem = "Baratheon"
		print("Casa:",mensagem)
	elif(b=="dragao"):
		mensagem = "Targaryen"
		print("Casa:",mensagem)
	elif(b=="rosa"):
		mensagem="Tyrell"
		print("Casa:",mensagem)
	elif(b=="sol"):
		mensagem= "Martell"
		print("Casa:",mensagem)
	elif(b=="lula"):
		mensagem="Greyjoy"
	elif(b=="esfolado"):
		mensagem="Bolton"
		print("Casa:",mensagem)
	elif(b=="turta"):
		mensagem= "Tully"
		print("Casa:",mensagem)
	else:
		mensagem= "Brasao invalido"
		print(mensagem)
		
-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:31:23) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input(" Digite o brasao: ")
print(" Entrada:",b)
if(b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if(b=="lobo"):
		mensagem = "Stark"
		print("Casa:",mensagem)
	elif(b=="leao"):
		mensagem = "Lannister"
		print("Casa:",mensagem)
	elif(b=="veado"):
		mensagem = "Baratheon"
		print("Casa:",mensagem)
	elif(b=="dragao"):
		mensagem = "Targaryen"
		print("Casa:",mensagem)
	elif(b=="rosa"):
		mensagem="Tyrell"
		print("Casa:",mensagem)
	elif(b=="sol"):
		mensagem= "Martell"
		print("Casa:",mensagem)
	elif(b=="lula"):
		mensagem="Greyjoy"
	elif(b=="esfolado"):
		mensagem="Bolton"
		print("Casa:",mensagem)
	elif(b=="turta"):
		mensagem= "Tully"
		print("Casa:",mensagem)
	else:
		mensagem= "Brasao invalido"
		print(mensagem)
		
-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:31:30) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input(" Digite o brasao: ")
print(" Entrada:",b)
if(b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if(b=="lobo"):
		mensagem = "Stark"
		print("Casa:",mensagem)
	elif(b=="leao"):
		mensagem = "Lannister"
		print("Casa:",mensagem)
	elif(b=="veado"):
		mensagem = "Baratheon"
		print("Casa:",mensagem)
	elif(b=="dragao"):
		mensagem = "Targaryen"
		print("Casa:",mensagem)
	elif(b=="rosa"):
		mensagem="Tyrell"
		print("Casa:",mensagem)
	elif(b=="sol"):
		mensagem= "Martell"
		print("Casa:",mensagem)
	elif(b=="lula"):
		mensagem="Greyjoy"
	elif(b=="esfolado"):
		mensagem="Bolton"
		print("Casa:",mensagem)
	elif(b=="turta"):
		mensagem= "Tully"
		print("Casa:",mensagem)
	else:
		mensagem= "Brasao invalido"
	print(mensagem)
		
-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:31:37) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input(" Digite o brasao: ")
print(" Entrada:",b)
if(b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if(b=="lobo"):
		mensagem = "Stark"
		print("Casa:",mensagem)
	elif(b=="leao"):
		mensagem = "Lannister"
		print("Casa:",mensagem)
	elif(b=="veado"):
		mensagem = "Baratheon"
		print("Casa:",mensagem)
	elif(b=="dragao"):
		mensagem = "Targaryen"
		print("Casa:",mensagem)
	elif(b=="rosa"):
		mensagem="Tyrell"
		print("Casa:",mensagem)
	elif(b=="sol"):
		mensagem= "Martell"
		print("Casa:",mensagem)
	elif(b=="lula"):
		mensagem="Greyjoy"
	elif(b=="esfolado"):
		mensagem="Bolton"
		print("Casa:",mensagem)
	elif(b=="turta"):
		mensagem= "Tully"
		print("Casa:",mensagem)
	else:
		mensagem= "Brasao invalido"
	print(mensagem)
		
-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:32:58) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input(" Digite o brasao: ")
print(" Entrada:",b)
if(b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if(b=="lobo"):
		mensagem = "Stark"
		print("Casa:",mensagem)
	elif(b=="leao"):
		mensagem = "Lannister"
		print("Casa:",mensagem)
	elif(b=="veado"):
		mensagem = "Baratheon"
		print("Casa:",mensagem)
	elif(b=="dragao"):
		mensagem = "Targaryen"
		print("Casa:",mensagem)
	elif(b=="rosa"):
		mensagem="Tyrell"
		print("Casa:",mensagem)
	elif(b=="sol"):
		mensagem= "Martell"
		print("Casa:",mensagem)
	elif(b=="lula"):
		mensagem="Greyjoy"
	elif(b=="esfolado"):
		mensagem="Bolton"
		print("Casa:",mensagem)
	elif(b=="turta"):
		mensagem= "Tully"
		print("Casa:",mensagem)
else:
	mensagem= "Brasao invalido"
print(mensagem)
		
-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 15:33:24) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input(" Digite o brasao: ")
print(" Entrada:",b)
if(b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if(b=="lobo"):
		mensagem = "Stark"
		print("Casa:",mensagem)
	elif(b=="leao"):
		mensagem = "Lannister"
		print("Casa:",mensagem)
	elif(b=="veado"):
		mensagem = "Baratheon"
		print("Casa:",mensagem)
	elif(b=="dragao"):
		mensagem = "Targaryen"
		print("Casa:",mensagem)
	elif(b=="rosa"):
		mensagem="Tyrell"
		print("Casa:",mensagem)
	elif(b=="sol"):
		mensagem= "Martell"
		print("Casa:",mensagem)
	elif(b=="lula"):
		mensagem="Greyjoy"
	elif(b=="esfolado"):
		mensagem="Bolton"
		print("Casa:",mensagem)
	elif(b=="turta"):
		mensagem= "Tully"
		print("Casa:",mensagem)
else:
	mensagem= "Brasao invalido"
print(mensagem)
		
-- EXECUTION TIME:
0.166037
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:33:30) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input(" Digite o brasao: ")
print(" Entrada:",b)
if(b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if(b=="lobo"):
		mensagem = "Stark"
		print("Casa:",mensagem)
	elif(b=="leao"):
		mensagem = "Lannister"
		print("Casa:",mensagem)
	elif(b=="veado"):
		mensagem = "Baratheon"
		print("Casa:",mensagem)
	elif(b=="dragao"):
		mensagem = "Targaryen"
		print("Casa:",mensagem)
	elif(b=="rosa"):
		mensagem="Tyrell"
		print("Casa:",mensagem)
	elif(b=="sol"):
		mensagem= "Martell"
		print("Casa:",mensagem)
	elif(b=="lula"):
		mensagem="Greyjoy"
	elif(b=="esfolado"):
		mensagem="Bolton"
		print("Casa:",mensagem)
	elif(b=="turta"):
		mensagem= "Tully"
		print("Casa:",mensagem)
else:
	mensagem= "Brasao invalido"
print(mensagem)
		
-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 15:33:35) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input(" Digite o brasao: ")
print(" Entrada:",b)
if(b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if(b=="lobo"):
		mensagem = "Stark"
		print("Casa:",mensagem)
	elif(b=="leao"):
		mensagem = "Lannister"
		print("Casa:",mensagem)
	elif(b=="veado"):
		mensagem = "Baratheon"
		print("Casa:",mensagem)
	elif(b=="dragao"):
		mensagem = "Targaryen"
		print("Casa:",mensagem)
	elif(b=="rosa"):
		mensagem="Tyrell"
		print("Casa:",mensagem)
	elif(b=="sol"):
		mensagem= "Martell"
		print("Casa:",mensagem)
	elif(b=="lula"):
		mensagem="Greyjoy"
	elif(b=="esfolado"):
		mensagem="Bolton"
		print("Casa:",mensagem)
	elif(b=="turta"):
		mensagem= "Tully"
		print("Casa:",mensagem)
else:
	mensagem= "Brasao invalido"
print(mensagem)
		
-- EXECUTION TIME:
0.135858
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:33:42) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input(" Digite o brasao: ")
print(" Entrada:",b)
if(b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if(b=="lobo"):
		mensagem = "Stark"
		print("Casa:",mensagem)
	elif(b=="leao"):
		mensagem = "Lannister"
		print("Casa:",mensagem)
	elif(b=="veado"):
		mensagem = "Baratheon"
		print("Casa:",mensagem)
	elif(b=="dragao"):
		mensagem = "Targaryen"
		print("Casa:",mensagem)
	elif(b=="rosa"):
		mensagem="Tyrell"
		print("Casa:",mensagem)
	elif(b=="sol"):
		mensagem= "Martell"
		print("Casa:",mensagem)
	elif(b=="lula"):
		mensagem="Greyjoy"
	elif(b=="esfolado"):
		mensagem="Bolton"
		print("Casa:",mensagem)
	elif(b=="turta"):
		mensagem= "Tully"
		print("Casa:",mensagem)
else:
	mensagem= "Brasao invalido"
print(mensagem)
		
-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:34:05) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input(" Digite o brasao: ")
print(" Entrada:",b)
if(b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if(b=="lobo"):
		mensagem = "Stark"
		print("Casa:",mensagem)
	elif(b=="leao"):
		mensagem = "Lannister"
		print("Casa:",mensagem)
	elif(b=="veado"):
		mensagem = "Baratheon"
		print("Casa:",mensagem)
	elif(b=="dragao"):
		mensagem = "Targaryen"
		print("Casa:",mensagem)
	elif(b=="rosa"):
		mensagem="Tyrell"
		print("Casa:",mensagem)
	elif(b=="sol"):
		mensagem= "Martell"
		print("Casa:",mensagem)
	elif(b=="lula"):
		mensagem="Greyjoy"
	elif(b=="esfolado"):
		mensagem="Bolton"
		print("Casa:",mensagem)
	elif(b=="turta"):
		mensagem= "Tully"
		print("Casa:",mensagem)
else:
	mensagem= "Brasao invalido"
   print(mensagem)
		
-- ERROR:
File "XXXX", line 34
    print(mensagem)
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:34:15) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input(" Digite o brasao: ")
print(" Entrada:",b)
if(b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if(b=="lobo"):
		mensagem = "Stark"
		print("Casa:",mensagem)
	elif(b=="leao"):
		mensagem = "Lannister"
		print("Casa:",mensagem)
	elif(b=="veado"):
		mensagem = "Baratheon"
		print("Casa:",mensagem)
	elif(b=="dragao"):
		mensagem = "Targaryen"
		print("Casa:",mensagem)
	elif(b=="rosa"):
		mensagem="Tyrell"
		print("Casa:",mensagem)
	elif(b=="sol"):
		mensagem= "Martell"
		print("Casa:",mensagem)
	elif(b=="lula"):
		mensagem="Greyjoy"
	elif(b=="esfolado"):
		mensagem="Bolton"
		print("Casa:",mensagem)
	elif(b=="turta"):
		mensagem= "Tully"
		print("Casa:",mensagem)
else:
	mensagem= "Brasao invalido"
	print(mensagem)
		
-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 15:34:23) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input(" Digite o brasao: ")
print(" Entrada:",b)
if(b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if(b=="lobo"):
		mensagem = "Stark"
		print("Casa:",mensagem)
	elif(b=="leao"):
		mensagem = "Lannister"
		print("Casa:",mensagem)
	elif(b=="veado"):
		mensagem = "Baratheon"
		print("Casa:",mensagem)
	elif(b=="dragao"):
		mensagem = "Targaryen"
		print("Casa:",mensagem)
	elif(b=="rosa"):
		mensagem="Tyrell"
		print("Casa:",mensagem)
	elif(b=="sol"):
		mensagem= "Martell"
		print("Casa:",mensagem)
	elif(b=="lula"):
		mensagem="Greyjoy"
	elif(b=="esfolado"):
		mensagem="Bolton"
		print("Casa:",mensagem)
	elif(b=="turta"):
		mensagem= "Tully"
		print("Casa:",mensagem)
else:
	mensagem= "Brasao invalido"
	print(mensagem)
		
-- EXECUTION TIME:
0.142699
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 15:36:23) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input(" Digite o brasao: ")
print(" Entrada:",b)
if(b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if(b=="lobo"):
		mensagem = "Stark"
		print("Casa:",mensagem)
	elif(b=="leao"):
		mensagem = "Lannister"
		print("Casa:",mensagem)
	elif(b=="veado"):
		mensagem = "Baratheon"
		print("Casa:",mensagem)
	elif(b=="dragao"):
		mensagem = "Targaryen"
		print("Casa:",mensagem)
	elif(b=="rosa"):
		mensagem="Tyrell"
		print("Casa:",mensagem)
	elif(b=="sol"):
		mensagem= "Martell"
		print("Casa:",mensagem)
	elif(b=="lula"):
		mensagem="Greyjoy"
	elif(b=="esfolado"):
		mensagem="Bolton"
		print("Casa:",mensagem)
	else:
		(b=="turta"):
		mensagem= "Tully"
		print("Casa:",mensagem)
else:
	mensagem= "Brasao invalido"
	print(mensagem)
		
-- EXECUTION TIME:
0.193347
-- ERROR:
  File "/home/codebench/codes/1671/1105/main.py", line 30
    (b=="turta"):
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 15:36:37) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input(" Digite o brasao: ")
print(" Entrada:",b)
if(b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if(b=="lobo"):
		mensagem = "Stark"
		print("Casa:",mensagem)
	elif(b=="leao"):
		mensagem = "Lannister"
		print("Casa:",mensagem)
	elif(b=="veado"):
		mensagem = "Baratheon"
		print("Casa:",mensagem)
	elif(b=="dragao"):
		mensagem = "Targaryen"
		print("Casa:",mensagem)
	elif(b=="rosa"):
		mensagem="Tyrell"
		print("Casa:",mensagem)
	elif(b=="sol"):
		mensagem= "Martell"
		print("Casa:",mensagem)
	elif(b=="lula"):
		mensagem="Greyjoy"
	elif(b=="esfolado"):
		mensagem="Bolton"
		print("Casa:",mensagem)
	else:
		(b=="turta"):
		mensagem= "Tully"
		print("Casa:",mensagem)
else:
	mensagem= "Brasao invalido"
	print(mensagem)
		
-- EXECUTION TIME:
0.18409
-- ERROR:
  File "/home/codebench/codes/1671/1105/main.py", line 30
    (b=="turta"):
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 15:37:04) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input(" Digite o brasao: ")
print(" Entrada:",b)
if(b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if(b=="lobo"):
		mensagem = "Stark"
		print("Casa:",mensagem)
	elif(b=="leao"):
		mensagem = "Lannister"
		print("Casa:",mensagem)
	elif(b=="veado"):
		mensagem = "Baratheon"
		print("Casa:",mensagem)
	elif(b=="dragao"):
		mensagem = "Targaryen"
		print("Casa:",mensagem)
	elif(b=="rosa"):
		mensagem="Tyrell"
		print("Casa:",mensagem)
	elif(b=="sol"):
		mensagem= "Martell"
		print("Casa:",mensagem)
	elif(b=="lula"):
		mensagem="Greyjoy"
	elif(b=="esfolado"):
		mensagem="Bolton"
		print("Casa:",mensagem)
	else:
		(b=="turta"):
		mensagem= "Tully"
		print("Casa:",mensagem)
else:
	mensagem= "Brasao invalido"
	print(mensagem)
		
-- EXECUTION TIME:
0.172177
-- ERROR:
  File "/home/codebench/codes/1671/1105/main.py", line 30
    (b=="turta"):
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 15:37:19) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input(" Digite o brasao: ")
print(" Entrada:",b)
if(b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if(b=="lobo"):
		mensagem = "Stark"
		print("Casa:",mensagem)
	elif(b=="leao"):
		mensagem = "Lannister"
		print("Casa:",mensagem)
	elif(b=="veado"):
		mensagem = "Baratheon"
		print("Casa:",mensagem)
	elif(b=="dragao"):
		mensagem = "Targaryen"
		print("Casa:",mensagem)
	elif(b=="rosa"):
		mensagem="Tyrell"
		print("Casa:",mensagem)
	elif(b=="sol"):
		mensagem= "Martell"
		print("Casa:",mensagem)
	elif(b=="lula"):
		mensagem="Greyjoy"
	elif(b=="esfolado"):
		mensagem="Bolton"
		print("Casa:",mensagem)
	else:
		(b=="turta"):
		mensagem= "Tully"
		print("Casa:",mensagem)
else:
	mensagem= "Brasao invalido"
	print("Casa:",mensagem)
		
-- EXECUTION TIME:
0.193911
-- ERROR:
  File "/home/codebench/codes/1671/1105/main.py", line 30
    (b=="turta"):
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 15:38:13) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input(" Digite o brasao: ")
print(" Entrada:",b)
if(b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if(b=="lobo"):
		mensagem = "Stark"
		print("Casa:",mensagem)
	elif(b=="leao"):
		mensagem = "Lannister"
		print("Casa:",mensagem)
	elif(b=="veado"):
		mensagem = "Baratheon"
		print("Casa:",mensagem)
	elif(b=="dragao"):
		mensagem = "Targaryen"
		print("Casa:",mensagem)
	elif(b=="rosa"):
		mensagem="Tyrell"
		print("Casa:",mensagem)
	elif(b=="sol"):
		mensagem= "Martell"
		print("Casa:",mensagem)
	elif(b=="lula"):
		mensagem="Greyjoy"
	elif(b=="esfolado"):
		mensagem="Bolton"
		print("Casa:",mensagem)
	else:
		(b=="turta"):
		mensagem= "Tully"
		print("Casa:",mensagem)
else:
	print(" Brasao invalido",mensagem)
		
-- EXECUTION TIME:
0.135083
-- ERROR:
  File "/home/codebench/codes/1671/1105/main.py", line 30
    (b=="turta"):
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 15:38:30) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input(" Digite o brasao: ")
print(" Entrada:",b)
if(b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if(b=="lobo"):
		mensagem = "Stark"
		print("Casa:",mensagem)
	elif(b=="leao"):
		mensagem = "Lannister"
		print("Casa:",mensagem)
	elif(b=="veado"):
		mensagem = "Baratheon"
		print("Casa:",mensagem)
	elif(b=="dragao"):
		mensagem = "Targaryen"
		print("Casa:",mensagem)
	elif(b=="rosa"):
		mensagem="Tyrell"
		print("Casa:",mensagem)
	elif(b=="sol"):
		mensagem= "Martell"
		print("Casa:",mensagem)
	elif(b=="lula"):
		mensagem="Greyjoy"
	elif(b=="esfolado"):
		mensagem="Bolton"
		print("Casa:",mensagem)
	else:
		(b=="turta"):
		mensagem= "Tully"
		print("Casa:",mensagem)
else:
	print(" Brasao invalido")
		
-- EXECUTION TIME:
0.148031
-- ERROR:
  File "/home/codebench/codes/1671/1105/main.py", line 30
    (b=="turta"):
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 15:38:33) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input(" Digite o brasao: ")
print(" Entrada:",b)
if(b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if(b=="lobo"):
		mensagem = "Stark"
		print("Casa:",mensagem)
	elif(b=="leao"):
		mensagem = "Lannister"
		print("Casa:",mensagem)
	elif(b=="veado"):
		mensagem = "Baratheon"
		print("Casa:",mensagem)
	elif(b=="dragao"):
		mensagem = "Targaryen"
		print("Casa:",mensagem)
	elif(b=="rosa"):
		mensagem="Tyrell"
		print("Casa:",mensagem)
	elif(b=="sol"):
		mensagem= "Martell"
		print("Casa:",mensagem)
	elif(b=="lula"):
		mensagem="Greyjoy"
	elif(b=="esfolado"):
		mensagem="Bolton"
		print("Casa:",mensagem)
	else:
		(b=="turta"):
		mensagem= "Tully"
		print("Casa:",mensagem)
else:
	print(" Brasao invalido")
		
-- EXECUTION TIME:
0.193103
-- ERROR:
  File "/home/codebench/codes/1671/1105/main.py", line 30
    (b=="turta"):
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:39:15) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input(" Digite o brasao: ")
print(" Entrada:",b)
if(b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if(b=="lobo"):
		mensagem = "Stark"
		print("Casa:",mensagem)
	elif(b=="leao"):
		mensagem = "Lannister"
		print("Casa:",mensagem)
	elif(b=="veado"):
		mensagem = "Baratheon"
		print("Casa:",mensagem)
	elif(b=="dragao"):
		mensagem = "Targaryen"
		print("Casa:",mensagem)
	elif(b=="rosa"):
		mensagem="Tyrell"
		print("Casa:",mensagem)
	elif(b=="sol"):
		mensagem= "Martell"
		print("Casa:",mensagem)
	elif(b=="lula"):
		mensagem="Greyjoy"
	elif(b=="esfolado"):
		mensagem="Bolton"
		print("Casa:",mensagem)
	else:
		mensagem= "Tully"
		print("Casa:",mensagem)
else:
	print(" Brasao invalido")
		
-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 15:39:16) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input(" Digite o brasao: ")
print(" Entrada:",b)
if(b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if(b=="lobo"):
		mensagem = "Stark"
		print("Casa:",mensagem)
	elif(b=="leao"):
		mensagem = "Lannister"
		print("Casa:",mensagem)
	elif(b=="veado"):
		mensagem = "Baratheon"
		print("Casa:",mensagem)
	elif(b=="dragao"):
		mensagem = "Targaryen"
		print("Casa:",mensagem)
	elif(b=="rosa"):
		mensagem="Tyrell"
		print("Casa:",mensagem)
	elif(b=="sol"):
		mensagem= "Martell"
		print("Casa:",mensagem)
	elif(b=="lula"):
		mensagem="Greyjoy"
	elif(b=="esfolado"):
		mensagem="Bolton"
		print("Casa:",mensagem)
	else:
		mensagem= "Tully"
		print("Casa:",mensagem)
else:
	print(" Brasao invalido")
		
-- EXECUTION TIME:
0.133073
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
 Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 15:40:23) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input(" Digite o brasao: ")
print(" Entrada:",b)
if(b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if(b=="lobo"):
		mensagem = "Stark"
		print("Casa:",mensagem)
	elif(b=="leao"):
		mensagem = "Lannister"
		print("Casa:",mensagem)
	elif(b=="veado"):
		mensagem = "Baratheon"
		print("Casa:",mensagem)
	elif(b=="dragao"):
		mensagem = "Targaryen"
		print("Casa:",mensagem)
	elif(b=="rosa"):
		mensagem="Tyrell"
		print("Casa:",mensagem)
	elif(b=="sol"):
		mensagem= "Martell"
		print("Casa:",mensagem)
	elif(b=="lula"):
		mensagem="Greyjoy"
		print("Casa:",mensagem)
	elif(b=="esfolado"):
		mensagem="Bolton"
		print("Casa:",mensagem)
	else:
		mensagem= "Tully"
		print("Casa:",mensagem)
else:
	print(" Brasao invalido")
		
-- EXECUTION TIME:
0.158235
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
 Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 21:07:04) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input(" Digite o brasao: ")
print(" Entrada:",b)
if(b=="lobo" or b=="leao" or b=="veado" or b=="dragao" or b=="rosa" or b=="sol" or b=="lula" or b=="esfolado" or b=="turta"):
	if(b=="lobo"):
		mensagem = "Stark"
		print("Casa:",mensagem)
	elif(b=="leao"):
		mensagem = "Lannister"
		print("Casa:",mensagem)
	elif(b=="veado"):
		mensagem = "Baratheon"
		print("Casa:",mensagem)
	elif(b=="dragao"):
		mensagem = "Targaryen"
		print("Casa:",mensagem)
	elif(b=="rosa"):
		mensagem="Tyrell"
		print("Casa:",mensagem)
	elif(b=="sol"):
		mensagem= "Martell"
		print("Casa:",mensagem)
	elif(b=="lula"):
		mensagem="Greyjoy"
		print("Casa:",mensagem)
	elif(b=="esfolado"):
		mensagem="Bolton"
		print("Casa:",mensagem)
	else:
		mensagem= "Tully"
		print("Casa:",mensagem)
else:
	print(" Brasao invalido")
		
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
